syntax = "proto3";
package login.service.v1;
option go_package = "gm-user/pkg/service/login.service";


message CaptchaMessage {
  string mobile = 1;
}

message CaptchaResp {

}

service LoginService{
  rpc GetCaptcha (CaptchaMessage) returns (CaptchaResp);
}